bridge/base/0-taskmanager-namespace.yaml
#! 0-taskmanager-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: taskmanager
    labels:
        com.docker.compose.project: taskmanager
