bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: taskmanager
    labels:
        com.docker.compose.project: taskmanager
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: taskmanager
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: taskmanager
                com.docker.compose.service: backend
                com.docker.compose.network.taskmanager-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: taskmanager-backend
                  image: taskmanager-backend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - curl -f http://localhost:5000/api/health || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 90
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: backend-5000
                      containerPort: 5000
                  volumeMounts:
                    - name: app-src-database
                      mountPath: /app/src/database
                    - name: app-logs
                      mountPath: /app/logs
            volumes:
                - name: app-src-database
                  hostPath:
                    path: C:\Users\matty\Downloads\task-management-system\backend\database
                - name: app-logs
                  hostPath:
                    path: C:\Users\matty\Downloads\task-management-system\backend\logs
