bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: taskmanager
    labels:
        com.docker.compose.project: taskmanager
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: taskmanager
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: taskmanager
                com.docker.compose.service: frontend
                com.docker.compose.network.taskmanager-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: taskmanager-frontend
                  image: taskmanager-frontend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command:
                            - /bin/sh
                            - -c
                            - curl -f http://localhost:3000/ || exit 1
                    periodSeconds: 30
                    initialDelaySeconds: 40
                    timeoutSeconds: 10
                    failureThreshold: 3
                  ports:
                    - name: frontend-3000
                      containerPort: 3000
                    - name: frontend-80
                      containerPort: 80
