bridge/base/taskmanager-network-network-policy.yaml
#! taskmanager-network-network-policy.yaml
# Generated code, do not edit
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: taskmanager-network-network-policy
    namespace: taskmanager
spec:
    podSelector:
        matchLabels:
            com.docker.compose.network.taskmanager-network: "true"
    policyTypes:
        - Ingress
        - Egress
    ingress:
        - from:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.taskmanager-network: "true"
    egress:
        - to:
            - podSelector:
                matchLabels:
                    com.docker.compose.network.taskmanager-network: "true"
